<resources>
    <string name="icon">icon</string>
    <string name="appName">Represent!</string>
    <string name="command">Enter Your Address / Zip code</string>
    <string name="background">background</string>
    <string name="hint">Address / Zip Code</string>
    <string name="go">Go!</string>
    <string name="currentLocation">Current Location</string>
    <string name="randomLocation">Random Location</string>
    <string name="congressionalTitle">Congress Representatives in</string>
</resources>