<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="91dp"
        android:layout_height="101dp"
        android:contentDescription="@string/icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.107"
        app:srcCompat="@drawable/icon" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/appName"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon" />

    <TextView
        android:id="@+id/command"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/command"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_name"
        app:layout_constraintVertical_bias="0.255" />

    <EditText
        android:id="@+id/address_input"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:background="@android:color/white"
        android:fontFamily="@font/montserrat"
        android:gravity="center_vertical"
        android:hint="@string/hint"
        android:inputType="textLongMessage|textEmailAddress"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/command"
        app:layout_constraintVertical_bias="0.093"
        tools:ignore="RtlCompat" />

    <Button
        android:id="@+id/go"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@android:color/holo_green_light"
        android:fontFamily="@font/montserrat"
        android:text="@string/go"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address_input"
        app:layout_constraintVertical_bias="0.147" />

    <Button
        android:id="@+id/current_location"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:fontFamily="@font/montserrat"
        android:text="@string/currentLocation"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/random_location"
        app:layout_constraintHorizontal_bias="0.733"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/go"
        app:layout_constraintVertical_bias="0.25" />

    <Button
        android:id="@+id/random_location"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="56dp"
        android:background="@android:color/white"
        android:fontFamily="@font/montserrat"
        android:text="@string/randomLocation"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/current_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/current_location"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>